Cycles World environment Texture node, movie doesn't update frame #48298

Closed
opened 2016-04-28 09:30:03 +02:00 by david mcsween · 7 comments

System Information
win 7 pro 64bit 8GB ram

Blender Version
Broken: 2.77 Hash: 515be07
Worked: (optional)

Short description of error
Loading a movie into the World > Environment Texture node, the movie does not update upon frame change even with Cyclic and Auto Refresh turned on.
However if I make an object material with the same movie in a normal texture node, the world frames begin updating again.

It seems that the Environment Texture node is not triggering on frame change event or any other event (value change etc.) The openGL view of the Environment texture does update correctly though.broken env texture.blend

Exact steps for others to reproduce the error
Included is an example blend. I cannot pack the movie. Use any movie (mine was .mp4), then disconnect the object material texture. The background will stop updating.

**System Information** win 7 pro 64bit 8GB ram **Blender Version** Broken: 2.77 Hash: 515be07 Worked: (optional) **Short description of error** Loading a movie into the World > Environment Texture node, the movie does not update upon frame change even with Cyclic and Auto Refresh turned on. However if I make an object material with the same movie in a normal texture node, the world frames begin updating again. It seems that the Environment Texture node is not triggering on frame change event or any other event (value change etc.) The openGL view of the Environment texture does update correctly though.[broken env texture.blend](https://archive.blender.org/developer/F307376/broken_env_texture.blend) **Exact steps for others to reproduce the error** Included is an example blend. I cannot pack the movie. Use any movie (mine was .mp4), then disconnect the object material texture. The background will stop updating.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @davidmcsween

Added subscriber: @davidmcsween

Added subscriber: @Sergey

Added subscriber: @Sergey
Sergey Sharybin self-assigned this 2016-04-28 13:03:18 +02:00

Will check it later.

Will check it later.

This issue was referenced by 3e32f8e601

This issue was referenced by 3e32f8e601b6ed9de80135e61b92cf8bffa2632a

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@ec6fc4ded5

This issue was referenced by blender/cycles@ec6fc4ded510d89540306d1c8fad9796fdc3594e
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#48298
No description provided.