Fix T48298: Cycles World environment Texture node, movie doesn't update frame